syntax = "proto3";

package echo;

//定義了一個 EchoServer
service Echo {
    rpc Echo (EchoRequest) returns(EchoReply){}
}

//定義了 Echo Server EchoRequest
message EchoRequest {
    int32 number1 = 1;
    int32 number2 = 2;

}

//定義了 Echo Response
message EchoReply {
    int32 result = 1;
}